--- a/formular-css.css
+++ b/formular-css.css
@@ -3,7 +3,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
-  background: white;
+  background: rgb(185, 52, 52);
 }
 
 /* --- Hidden --- */
