--- a/formular-css.css
+++ b/formular-css.css
@@ -3,7 +3,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
-  background: rgb(185, 52, 52);
+  background: white;
 }
 
 /* --- Hidden --- */
@@ -22,7 +22,7 @@ body {
 
 .sbb-logo {
   height: auto;
-  width: 20%;
+  width: 100%;
 }
 
 .sbb-header h1 {
