--- a/formular-css.css
+++ b/formular-css.css
@@ -1,4 +1,4 @@
-/* --- Global --- ganzes Dokument*/
+/* --- Global --- ganzes Dokument festgelegt*/
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
